style.css
body {
    font-family: Arial, sans-serif;
    background-color: #E63733;
    margin: 0;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: auto;
    color: white;
    height: auto;
}

.content {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

img {
    max-width: 90%;
    max-height: 60vh;
}

.links {
    margin-top: 50pt;
    font-size: 15pt;
}

.links a {
    color: white;
    text-decoration: none;
    margin: 0 10px;
    transition: color 0.3s ease;
}

.links a:hover {
    color: #bbbbbb;
}

.privacy-content {
    padding: 100pt;
    text-align: justify;
    max-width: 800px;
    color: white;
}

.heading_1,
.em,
.bodytext,
[data-custom-class="title"],
[data-custom-class="subtitle"],
[data-custom-class="body_text"],
[data-custom-class="heading_1"],
[data-custom-class="link"],
.block-component,
strong,
em,
[data-custom-class="link"] {
    color: white;
}

[data-custom-class="link"] {
    text-decoration: underline;
    font-weight: bold;
}

[data-custom-class="body"] span,
[data-custom-class="body"] div {
    color: white;
}

